--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ pandas==2.2.1
 numpy==1.26.4
 scikit-learn==1.4.2
 imbalanced-learn==0.11.0
-Pillow==10.4.0
+Pillow==10.3.0
 streamlit==1.37.1
 setuptools
+joblib==1.2.0
